--- a/assignment3.html
+++ b/assignment3.html
@@ -52,7 +52,9 @@ Our puppies receive daily attention from the entire family and come prespoiled. 
 Licensed by the state of Illinois</p>
 
 
- <p id="sign"> Made by: Sydney Hill 2021</p> </footer>
+ <p id="sign"> Made by: Sydney Hill 2021</p>
+ <a href="http://dribbble.com/twofreshcreative" target="_blank">Dog gif found on dribble 'Giving to BU'</a>
+ </footer>
 
   </body>
 </html>
