--- a/GhostTrain.html
+++ b/GhostTrain.html
@@ -98,7 +98,7 @@
 </div> <!---close row-->
 
 <footer>
-<p> &#169; Sydney E Hill Illinois State University </p>
+<p> &#169; 2021 Sydney E Hill Illinois State University </p>
 </footer>
 
 
