--- a/Assignment1/BirthdayParty.html
+++ b/Assignment1/BirthdayParty.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
+<html lang="en">
 <html>
+
   <head>
     <meta charset="UTF-8">
     <title>It's Gonna Be Me</title>
@@ -14,10 +16,10 @@
       <header>
         <h2>The Sydney Morning Times</h2>
 
-        <p> ONE OF AMERICA'S GREATEST NEWSPAPERS </p>
-        </ol>
+        <p class= "divide"> ONE OF AMERICA'S GREATEST NEWSPAPERS </p>
 
-        <p class= "divide"><div id = "Lalign"> VOL. 1</div>  <div id ="Ralign"> WEEK OF AUG. 8, 2000 </div> </p>
+
+        <div id = "Lalign"> VOL. 1</div>  <div id ="Ralign"> WEEK OF AUG. 8, 2000 </div>
 
         <h1> "It's Gonna Be Me" #1 Hit for NSYNC</h1>
       </header>
@@ -27,8 +29,7 @@
 <section>
   <img class="imgsize" src="Cover.jpg" alt= "No Strings Attached Album Cover">
 
-
-<p> It’s Gonna Be Me </p>
+<h4> It’s Gonna Be Me</h4>
 
 <p>Released: June 2000 </p>
 
@@ -46,19 +47,19 @@
 
 <section>
 
-
-      <p><b>Lyrics</b> It's gonna be me Ooh, yeah You might been hurt, babe That ain't no lie You've seen them all come and go, oh I remember you told me That it made you believe in
+<h5>Lyrics</h5>
+      <p>It's gonna be me Ooh, yeah You might been hurt, babe That ain't no lie You've seen them all come and go, oh I remember you told me That it made you believe in
 <a href="https://youtu.be/IT8XvzIfi4U" target="_blank"> <i>No man, no cry</i></a>
 Maybe that's why Every little thing I do Never seems enough for you You don't want to lose it again But I'm not like them Baby, when you finally Get to love somebody Guess what It's gonna be me You've got no choice, babe But to move on, and you know There ain't no time to waste You're just too blind, to see But in the end, ya know it's gonna be me You can't deny So just tell me why Every little thing I do Never seems enough for you You don't want to lose it again But I'm not like them Baby, when you finally Get to love somebody (somebody) Guess what (guess what) It's gonna be me </p>
 
 </section>
 <section>
-
+<h6>Lyrics Continued</h6>
       <p> It's gonna be me Ooh, yeah yeah There comes a day When I'll be the one, you'll see It's gonna gonna gonna gonna It's gonna be me All that I do, is not enough for you I don't want to lose it But I'm not like that When finally (finally) You get to love Guess what? (guess what?) It's gonna be me Every little thing I do Never seems enough for you (for you babe) You don't want to lose it again (don't want to lose it) But I'm not like them Baby, when you finally Get to love somebody (love) Guess what (guess what) It's gonna be me Every little thing I do Never seems enough for you You don't want to lose it again (don't want to lose it) But I'm not like them Baby, when you finally (baby when you finally) Get to love somebody Guess what (guess what) It's gonna be me
 </p>
 
 </section>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/GQMlWwIXg3M" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/GQMlWwIXg3M" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
 
@@ -70,9 +71,9 @@ Maybe that's why Every little thing I do Never seems enough for you You don't wa
   the word "may". I light of that, viwers have created external videos and images to mock the song.</p>
 
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/dxS1Je9UrGQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/dxS1Je9UrGQ" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-<img class="imgsize" src="its gonna be may.jpg" alt= "It's Gonna Be May Meme">
+<img class="imgsize" src="its_gonna_be_may.jpg" alt= "It's Gonna Be May Meme">
 
 
 
