--- a/Assignment1/BirthdayParty.html
+++ b/Assignment1/BirthdayParty.html
@@ -13,7 +13,7 @@
 
     <div id="wrapper">
       <header>
-        <h2>The Sydney Morning Times</h2>
+        <p id="newstitle" >The Sydney Morning Times</p>
         <p class= "divide"> ONE OF AMERICA'S GREATEST NEWSPAPERS </p>
         <div id = "Lalign"> VOL. 1</div>  <div id ="Ralign"> WEEK OF AUG. 8, 2000 </div>
 
@@ -25,7 +25,7 @@
 <section>
   <img class="imgsize" src="Cover.jpg" alt= "No Strings Attached Album Cover">
 
-<h3> It’s Gonna Be Me</h3>
+<p class="source"> It’s Gonna Be Me</p>
 
 <p>Released: June 2000 </p>
 
@@ -43,42 +43,48 @@
 
 <section>
 
-<h4>Lyrics</h4>
+<h2>Lyrics</h2>
       <p>It's gonna be me Ooh, yeah You might been hurt, babe That ain't no lie You've seen them all come and go, oh I remember you told me That it made you believe in
 <a href="https://youtu.be/IT8XvzIfi4U" target="_blank"> <i>No man, no cry</i></a>
 Maybe that's why Every little thing I do Never seems enough for you You don't want to lose it again But I'm not like them Baby, when you finally Get to love somebody Guess what It's gonna be me You've got no choice, babe But to move on, and you know There ain't no time to waste You're just too blind, to see But in the end, ya know it's gonna be me You can't deny So just tell me why Every little thing I do Never seems enough for you You don't want to lose it again But I'm not like them Baby, when you finally Get to love somebody (somebody) Guess what (guess what) It's gonna be me </p>
 
 </section>
 <section>
-<h5>Lyrics Continued</h5>
+<h3>Lyrics Continued</h3>
       <p> It's gonna be me Ooh, yeah yeah There comes a day When I'll be the one, you'll see It's gonna gonna gonna gonna It's gonna be me All that I do, is not enough for you I don't want to lose it But I'm not like that When finally (finally) You get to love Guess what? (guess what?) It's gonna be me Every little thing I do Never seems enough for you (for you babe) You don't want to lose it again (don't want to lose it) But I'm not like them Baby, when you finally Get to love somebody (love) Guess what (guess what) It's gonna be me Every little thing I do Never seems enough for you You don't want to lose it again (don't want to lose it) But I'm not like them Baby, when you finally (baby when you finally) Get to love somebody Guess what (guess what) It's gonna be me
 </p>
 
 </section>
+
+<section>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/GQMlWwIXg3M" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
 
-<p id="description"> <b>Description</b> <br> This is a song about a girl who doesn’t want to hurry into another relationship in fear of getting hurt, but the guy persues her anyway. Saying he is different from other guys and to give it time because she is gonna run to him when she realizes how great he is and that she will regret the time she’s wasted.
+<h2 class="source"> Description</h2>
+
+<p> This is a song about a girl who doesn’t want to hurry into another relationship in fear of getting hurt, but the guy persues her anyway. Saying he is different from other guys and to give it time because she is gonna run to him when she realizes how great he is and that she will regret the time she’s wasted.
 </p>
 
-<h6>Parodies & Memes</h6>
+
+
+<h2 id="song">Parodies & Memes</h2>
 <p class="span"> Because of the sylistic choices of Max Martin, lead singer Justin Timberlake was told to "hit the word 'Me' harder". This exaggerated the word so much that it sounds like
   the word "may". I light of that, viwers have created external videos and images to mock the song.</p>
 
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/dxS1Je9UrGQ" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-<img class="imgsize" src="its_gonna_be_may.jpg" alt= "It's Gonna Be May Meme">
+<img id="may" src="its_gonna_be_may.jpg" alt= "It's Gonna Be May Meme">
 
-
+</section>
 
   </main>
 
 
 
       <footer>
-        <h6> sources </h6>
+        <h2 id="source"> sources </h2>
           <a href="https://media2.giphy.com/headers/nsync/c83axFMT0Ivy.jpg" target="_blank"> Cover Photo</a>
           <a href="https://www.stereogum.com/2075695/nsync-no-strings-attached-turns-20/columns/the-week-in-pop/" target="_blank"> Album Cover</a>
           <a href="https://www.eonline.com/uk/news/652124/the-internet-is-preparing-for-the-onslaught-of-it-s-gonna-be-may-justin-timberlake-memes" target="_blank"> May Meme</a>
